correct spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body{
-background-color: pink;
+background-color: pink;in
   opacity:0.8;
 }
 h1{
